--- a/app/design/frontend/default/rooja/layout/page.xml
+++ b/app/design/frontend/default/rooja/layout/page.xml
@@ -50,7 +50,9 @@ Default layout, loads most of the pages
 				<action method="addJs"><script>jquery/resetjQuery.js</script></action>
 				<action method="addJs"><script>jquery/jquery.innerfade.js</script></action>
 				<action method="addJs"><script>jquery/jquery.fancybox.js</script></action>
-				<!-- <action method="addJs"><script>jquery/jquery.fancybox-1.3.4.pack.js</script></action>-->
+				<action method="addJs"><script>onboard.js</script></action>
+
+		 <!-- <action method="addJs"><script>jquery/jquery.fancybox-1.3.4.pack.js</script></action>-->
 								
                 <block type="page/js_cookie" name="js_cookies" template="page/js/cookie.phtml"/>
 
@@ -59,7 +61,7 @@ Default layout, loads most of the pages
                 <action method="addCss"><stylesheet>css/login.css</stylesheet></action>
 								<!-- <action method="addCss"><stylesheet>css/jquery.fancybox-1.3.4.css</stylesheet></action> -->
                 <action method="addItem"><type>skin_css</type><name>css/styles-ie.css</name><params/><if>lt IE 8</if></action>
-
+		 <action method="addCss"><stylesheet>css/onboard.css</stylesheet></action>
                 <action method="addItem"><type>js</type><name>lib/ds-sleight.js</name><params/><if>lt IE 7</if></action>
                 <action method="addItem"><type>skin_js</type><name>js/ie6.js</name><params/><if>lt IE 7</if></action>
 			</block>
@@ -89,6 +91,7 @@ Default layout, loads most of the pages
 				<action method="addCss"><stylesheet>css/jquery.fancybox.css</stylesheet></action>
                  <!-- <action method="addJs"><script>jquery.js</script></action> -->
                  <action method="addJs"><script>scrolling.js</script></action>
+		<action method="addJs"><script>onboard.js</script></action>
 
                 <block type="page/js_cookie" name="js_cookies" template="page/js/cookie.phtml"/>
 
@@ -96,6 +99,8 @@ Default layout, loads most of the pages
                 <action method="addCss"><stylesheet>css/reset.css</stylesheet></action>
                 <action method="addCss"><stylesheet>css/login.css</stylesheet></action>
                 <action method="addCss"><stylesheet>css/rooja.css</stylesheet></action>
+	  	  <action method="addCss"><stylesheet>css/onboard.css</stylesheet></action>
+
                 <action method="addItem"><type>skin_css</type><name>css/styles-ie.css</name><params/><if>lte IE 8</if></action>
 
                 <action method="addItem"><type>js</type><name>lib/ds-sleight.js</name><params/><if>lt IE 7</if></action>
