totals.php added

--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -204,11 +204,11 @@ echo '<span>' .  '</span>';
 			</section>
 						
 
-					<?php if($boutique==0){ ?>
+					<!--<?php if($boutique==0){ ?>
 					<figure id="likeDetails" class="sideAd">
 						<p>Want to see the price drop? Like this item!</p>
 					</figure>
-					<?php } ?>
+					<?php } ?>-->
 				
 				</section>
 			
@@ -440,6 +440,8 @@ echo '<span>' .  '</span>';
 	</div>
 </section>
 <?php if($boutique==0){ ?>
+
+<!--
 <script type="text/javascript">
 function formatCurrency(num) {
   var sign;
@@ -515,6 +517,8 @@ function formatCurrency(num) {
    
      
 </script>
+-->
+
 <?php } ?>
 <script type="text/javascript">
 (function ($) {
