--- a/app/design/frontend/default/rooja/template/checkout/success.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/success.phtml
@@ -13,6 +13,21 @@ fb_param.value = '0.00';
 </script>
 <noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/offsite_event.php?id=6007539340126&amp;value=0" /></noscript>
 
+<script type="text/javascript">
+var fb_param = {};
+fb_param.pixel_id = '6009062441947';
+fb_param.value = '0.00';
+fb_param.currency = 'USD';
+(function(){
+  var fpw = document.createElement('script');
+  fpw.async = true;
+  fpw.src = '//connect.facebook.net/en_US/fp.js';
+  var ref = document.getElementsByTagName('script')[0];
+  ref.parentNode.insertBefore(fpw, ref);
+})();
+</script>
+<noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/offsite_event.php?id=6009062441947&amp;value=0&amp;currency=USD" /></noscript>
+
 <script type="text/javascript">/* <![CDATA[ */var google_conversion_id = 997818953;var google_conversion_language = "en";var google_conversion_format = "3";var google_conversion_color = "ffffff";var google_conversion_label = "KcLcCJ_7xwQQyYTm2wM";var google_conversion_value = 0;/* ]]> */</script><script type="text/javascript" src="http://www.googleadservices.com/pagead/conversion.js"></script><noscript><div style="display:inline;"><img height="1" width="1" style="border-style:none;" alt="" src="http://www.googleadservices.com/pagead/conversion/997818953/?value=0&amp;label=KcLcCJ_7xwQQyYTm2wM&amp;guid=ON&amp;script=0"/></div></noscript>	<p>We have received your order and will email you with a confirmation when it ships. <!-- You Earned <?php //echo $this->getPointsEarned() ?> on this purchase</p> -->	<p>If you have any questions or there is an error in your order, please <a class="contact" href="/contact">Contact Us</a></p><?php if ($this->getCanViewOrder() && $this->getCanPrintOrder()) :?>    <p>        <?php echo $this->__('Click <a class="contact" href="%s" onclick="this.target=\'_blank\'">here to print</a> a copy of your order confirmation.', $this->getPrintUrl()) ?>        <?php echo $this->getChildHtml() ?>    </p><?php endif;?><?php endif;?><button type="button" class="button" id="continueShoppingBtn" title="Return Home" onclick="window.location='/'">Return Home</button></section><section id="sharePurchase" class="right share-purchase">	<h3>Share Your Purchase!</h3>	<p>Let your friends know you scored some sweet loot on Rooja! Invite 10 friends to Rooja and get free shipping for 2 months.</p>	<!-- AddThis Button BEGIN -->	<div class="addthis_toolbox addthis_default_style addthis_32x32_style">	<a class="addthis_button_facebook"></a>	<a class="addthis_button_twitter"></a>	<a class="addthis_button_email"></a>	<a class="addthis_button_google"></a>	<a class="addthis_bubble_style"></a>	</div>	<script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>	<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=philosophie"></script>	<!-- AddThis Button END --></section>
 
 <!-- Google Code for Rooja Purchase Conversion Page -->
