--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -868,3 +868,244 @@ font-size: 12px;
 font-weight: bold;
 line-height: 17px;
 }
+/*New Landing Page Aabha*/
+
+
+/*
+* 1. Improves usability and consistency of cursor style between image-type 'input' and others
+* 2. Corrects inability to style clickable 'input' types in iOS
+*/
+
+@font-face {
+	font-family: 'Quattrocento';
+    src: url('fonts/QuattrocentoSans-Regular.eot');
+    src: url('fonts/QuattrocentoSans-Regular.eot') format('embedded-opentype'),
+         url('fonts/QuattrocentoSans-Regular.woff') format('woff'),
+         url('fonts/QuattrocentoSans-Regular.ttf') format('truetype'),
+         url('fonts/QuattrocentoSans-Regular.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+	font-family: 'Gotham Book';
+    src: url('fonts/Gotham-Book.eot');
+    src: url('fonts/Gotham-Book.eot') format('embedded-opentype'),
+         url('fonts/Gotham-Book.woff') format('woff'),
+         url('fonts/Gotham-Book.ttf') format('truetype'),
+         url('fonts/Gotham-Book.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+	font-family: 'Gotham Light';
+    src: url('fonts/Gotham-Light.eot');
+    src: url('fonts/Gotham-Light.eot') format('embedded-opentype'),
+         url('fonts/Gotham-Light.woff') format('woff'),
+         url('fonts/Gotham-Light.ttf') format('truetype'),
+         url('fonts/Gotham-Light.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+	font-family: 'Gotham Medium';
+    src: url('fonts/Gotham-Medium.eot');
+    src: url('fonts/Gotham-Medium.eot') format('embedded-opentype'),
+         url('fonts/Gotham-Medium.woff') format('woff'),
+         url('fonts/Gotham-Medium.ttf') format('truetype'),
+         url('fonts/Gotham-Medium.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+	font-family: 'Gotham Extra Light';
+    src: url('fonts/Gotham-XLight.eot');
+    src: url('fonts/Gotham-XLight.eot') format('embedded-opentype'),
+         url('fonts/Gotham-XLight.woff') format('woff'),
+         url('fonts/Gotham-XLight.ttf') format('truetype'),
+         url('fonts/Gotham-XLight.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+	font-family: 'segoeui';
+    src: url('fonts/segoeui.eot');
+    src: url('fonts/segoeui.eot') format('embedded-opentype'),
+         url('fonts/segoeui.woff') format('woff'),
+         url('fonts/segoeui.ttf') format('truetype'),
+         url('fonts/segoeui.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+font-family: 'Open_Sans_Light';
+src: url('fonts/opensans-light-webfont.eot');
+src: url('fonts/opensans-light-webfont.eot?#iefix') format('embedded-opentype'),
+url('fonts/opensans-light-webfont.woff') format('woff'),
+url('fonts/opensans-light-webfont.ttf') format('truetype'),
+url('fonts/opensans-light-webfont.svg#Open_Sans_Light') format('svg');
+font-weight: normal;
+font-style: normal;
+}
+@font-face {
+font-family: 'Open_Sans';
+src: url('fonts/opensans-regular-webfont.eot');
+src: url('fonts/opensans-regular-webfont.eot?#iefix') format('embedded-opentype'),
+url('fonts/opensans-regular-webfont.woff') format('woff'),
+url('fonts/opensans-regular-webfont.ttf') format('truetype'),
+url('fonts/opensans-regular-webfont.svg#Open_Sans') format('svg');
+font-weight: normal;
+font-style: normal;
+}
+html{-webkit-tap-highlight-color: rgba(0,0,0,0); /* 3 */
+   -webkit-text-size-adjust: 100%; /* 4 */
+   -ms-text-size-adjust: 100%; /* 4 */}
+body{-webkit-font-smoothing:subpixel-antialiased; text-rendering: optimizeLegibility;}
+button,
+html input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+   cursor: pointer; /* 1 */
+   
+}
+/*
+* Corrects inner padding and border displayed oddly in FF3/4
+* www.sitepen.com/blog/2008/05/14/the-devils-in-the-details-fixing-dojos-toolbar-buttons/
+*/
+ 
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+   border: 0;
+   padding: 0;
+}
+.nw button{border:none;}
+.nw{ line-height:1.2;}
+.nw h1, .nw h2, .nw h3, h4, .nw h5, .nw h6{text-transform:uppercase; font-weight:normal;}
+.nw h2{ font-size:36px; line-height:1; margin:20px 0; font-family:segoeui, arial; }
+.lead{ font-size:24px; text-align:center; margin-bottom:45px; line-height:46px; text-align:left; font-family:Open_Sans_Light, Opne_Sans, arial;}
+.LandingBanner, .Landing .headerNw, .Landing .footerNw, .Landing .wrapper, .featuredBrands{*display:block; clear:both; *height:auto; *overflow:hidden; }
+.LandingBanner:after, .Landing .headerNw:after, .Landing .footerNw:after, .Landing .wrapper:after, .featuredBrands:after{clear: both; content: "."; display: block; font-size: 1px; height: 0; line-height: 0; visibility:hidden;}
+.DispInB, .offers li, .Landing .offers, .Landing .offers li div, .Landing .ico-call, .nmbr, .footerNw .social a, .Landing .ico-fb, .Landing .ico-tw, .Landing .joinnw, .feedBlock, .feedBlock .cmt, .Landing .ico-member{display:inline-block; *display:inline; vertical-align:middle; *zoom:1; _height:1px; min-height:1px;}
+/*Structure*/
+.Landing{ color:#000; font-size:13.4px;}
+.LandingBanner, .Landing .headerNw, .Landing .footerNw{ width:100%; text-align:left}
+.Landing .headerNw{ background:url(images/header_bg.gif) repeat top left; height:94px;}
+.Landing .headerNw .wrapper{text-align:center;}
+.Landing .footerNw{ background:url(images/footer_bg.gif) repeat top left;}
+.Landing .wrapper{ width:1100px; margin:0 auto; padding:0 18px; text-align:left}
+
+/*Icons etc*/
+.Landing .sprite, .blockTestimonial:before, .blockTestimonial:after, .feedBlock .cmt:before{background:url(images/sprite.png) no-repeat; vertical-align:middle;}
+.Landing .ico-freeship{ background-position:0px 0px; width:32px; height:22px; margin-right:3px;}
+.Landing .ico-cod{ background-position:-35px 0px; width:30px; height:19px; margin-right:3px;}
+.Landing .ico-freereturns{ background-position:-67px 0px; width:20px; height:19px; margin-right:3px;}
+.Landing .ico-call{ background-position:-1px -126px; width:25px; height:25px; margin-right:5px;}
+.Landing .ico-member{ background-position:0px -413px; width:360px; height:42px;}
+.blockTestimonial:before{ background-position:0px -95px; width:27px; height:24px;}
+.blockTestimonial:after{ background-position:-28px -95px; width:35px; height:31px;}
+.Landing .feedBlock .cmt:before{ background-position:0px -24px; width:22px; height:28px;}
+.Landing .ico-timelimit{ background-position:-74px -44px; width:96px; height:115px; margin:0 auto;}
+.Landing .ico-home-delivery{ background-position:0px -162px; width:201px; height:138px; margin:0 auto;}
+.Landing .joinnw{ background-position:0px -455px; width:210px; height:27px;}
+.Landing .ico-fb{ background-position:-26px -126px; width:24px; height:24px; margin-right:8px;}
+.Landing .ico-tw{ background-position:-50px -126px; width:24px; height:24px; margin-right:8px;}
+.Landing a:hover .ico-fb{ background-position:-171px -0px; width:24px; height:24px; margin-right:8px;}
+.Landing a:hover .ico-tw{ background-position:-171px -24px; width:24px; height:24px; margin-right:8px;}
+.Landing .rooja-small{ background-position:-92px -1px; width:79px; height:38px; float:left;}
+
+/*Header*/
+.Landing .Logo{ float:left; margin-top:15px;}
+.Landing button{ background-color:#eca70d; border-radius:0; display:block ; color:#fff; font-size:33.86px; font-family:segoeui, Arial; line-height:1;}
+.Landing button:hover{ box-shadow:none;  background-color:#cb900c;}
+.Landing .Call{ float:right; margin-top:30px; color:#4f3059; font-size:17px; text-align:right; white-space:nowrap;}
+.Call .nmbr{vertical-align:middle; font-family:Quattrocento; font-size:17px; line-height:1; white-space:nowrap;}
+.Call .nmbr small{ font-size:12px;}
+.Landing .offers{ margin:35px auto;}
+.Landing .offers li{ margin-right:20px; text-transform:uppercase; font-size:11.71px; color:#4f3059; font-family:Gotham Medium, Arial; }
+.Landing .offers li div{vertical-align:middle!important;}
+/*First-Screen*/
+.topCnt{ min-height:415px;}
+.Landing .topCnt h2{ line-height: 46px;}
+.btmCnt{ min-height:190px; position:relative;}
+a.lCommon{ color:#000; text-decoration:underline;}
+a.lCommon:hover{ color:#000; text-decoration:none;}
+.fScreenLeft{ width:380px; float:left; margin-top:10px; min-height:630px; margin-bottom:10px;}
+.fScreenRight{ float:right;}
+.flushRight{ margin-right:-18px;}
+.beMember{ width:100%; text-align:center; height:61px; margin:25px 0;  font-size:12px; color:#fff; }
+.blockTestimonial{ border-radius:15px; border:5px solid #f3eefa; padding:20px 12px; font-size:12px; line-height:21px; font-family:Arial, Helvetica, sans-serif; color:#000; position:relative; margin-bottom:10px; position:absolute; bottom:0; left:0; width:351px;}
+.blockTestimonial:before, .blockTestimonial:after{ content:""; display:block; position:absolute; z-index:100; }
+.blockTestimonial:before{ top:-17px; left:-12px;}
+.blockTestimonial:after{ bottom:-15px; right:-10px;}
+.blockTestimonial .writer{ font-family:Verdana, Geneva, sans-serif;}
+.featuredBrands h3{ line-height:22px; text-decoration:underline; margin-top:12px; margin-bottom:10px; font-size:14px; font-family:Gotham Medium, Arial; font-weight:bold; }
+.featuredBrands ul{ display:table; width:100%; *display:block; margin-bottom:15px;}
+.featuredBrands li{ vertical-align:middle; display:table-cell; *display:inline; *margin-right:14px;}
+/*LandingBanner*/
+.LandingBanner{ border-top:10px solid #4f3059; border-bottom:10px solid #4f3059; background:url(images/mens_wear_shirt.jpg) #ffffff no-repeat left top; position:relative; height:623px; }
+.LandingBanner .Model{background:url(images/mens_wear.jpg) no-repeat right top; position:absolute; right:0; top:0; bottom:0; height:100%; width:50%; z-index:1;}
+.LandingBanner .BannerMatter{ width:485px; margin-left:53%; color:#22222; position:absolute; top:0; left:0; bottom:0; height:100%; z-index:2; text-align:left}
+.BannerMatter .promotionText{width:285px; position:absolute; bottom:36px; right:0;}
+.promotionText{ text-align:center; }
+.promotionText h3{font-size:14px; color:#4f3059; margin:15px 0; font-weight:bold; font-family:Gotham Light;}
+.promotionText .content{ font-size:12px; font-style:italic!important; font-family:Constantia, Georgia;}
+/*TwitterFeed*/
+.TwitterFeed{ margin-top:15px;}
+.TwitterFeed .lead, .TwitterFeed h2{ text-align:center;}
+.feedBlock{ width:32%; margin-right:1%; margin-bottom:50px; position:relative; min-height:130px; font-family:Arial, Helvetica, sans-serif; line-height:21px; vertical-align:top;}
+.feedBlock:nth-child(3n){ margin-right:0;}
+.feedBlock .writer{position:absolute; top:-2px; left:0; z-index:100; text-align:left; font-size:12px;}
+.feedBlock .writer strong{ letter-spacing:-.02em;}
+.feedBlock .cmt{ border-radius:10px; border:6px solid #ad8bde; padding:8px 12px; width:209px; font-size:13.4px; color:#000; position:relative; background-color:#f8f9f9; margin-left:94px; vertical-align: top;}
+.feedBlock .cmt:before{ position:absolute; top:19px; left:-22px; content:""; display:block;}
+.feedblock a, .feedblock a:hover{color:#38008c;}
+/*Footer*/
+.footerNw, .footerNw .promotionText h3{color:#fff}
+.footerNw a{color:#c7b299;}
+.footerNw a:hover{color:#fbbd55; text-decoration:underline;}
+.footerNw .promotionText{ float:left; width:30%; margin:70px 1.5% 0;}
+.paymentMethd{ float:right; text-align:center; margin-bottom:4px;}
+.paymentMethd h4{ margin:57px 0 5px; font-family:Quattrocento; font-size:12.56px; padding:0;}
+button.joinRooja{ width:276px; height:86px; margin:103px auto 25px; font-size:12px; }
+.blockTime{ width:223px!important; margin:0 auto;}
+a.joinLink{ text-decoration:underline; font-family:Gotham Book;}
+a.joinLink:hover{ text-decoration:none;}
+.footerNw .foot{ background-color:#000; height:38px; padding:4px 0;}
+.footerNw .social{ margin:7px 0; float:right; white-space:nowrap;}
+.footerNw .social a{ margin-right:25px; font-family:Quattrocento; font-size:12px;}
+/*Popup*/
+.bgDull{ position: fixed; top:0; left:0; width:100%; height:100%; background-color:#000; opacity:.4; filter:alpha(opacity=40); z-index: 9950; display:none;}
+.popups {
+	z-index:9999;
+	position:fixed;
+	top:50%; 
+	left:50%;
+	background-color:#fff;
+    box-shadow: 0 0 5px rgba(0,0,0,.75);
+    display:none;
+    padding:20px;
+}
+.popups h2{ font-size:22.87px; margin-top:10px; margin-bottom:35px; text-align: center}
+.popups .rooja_signup_right_fb_create{margin-left: auto; margin-right: auto;}
+#registerForm{
+	width:495px;
+	margin-left:-247px;
+	margin-top:-275px;
+}
+.popups h2{ text-align: center; font-family:Gotham Extra Light;}
+.popups .popClose{ cursor: pointer; background-color:#4f3059; background-position:-171px -48px; width:20px; height:20px; position: absolute; right:3px; top:3px; z-index:9999; text-indent:-1000px; overflow:hidden; }
+.popups .popClose:hover{background-position:-191px -48px;}
+.nw .rooja_signup_right_fb_create a{ background-position:0 -488px; width:265px; height:41px;}
+.nw .rooja_signup_right_fb_create a:hover{ background-position:0 -529px;}
+.bdrOption{ border-bottom:2px dotted #54365e; padding-bottom:26px; margin-bottom: 26px; position:relative;}
+.bdrOption .or{ font-family:arial; font-weight:bold; font-size:12px; position: absolute; bottom:-5px; background:#fff; width:33px; text-transform: uppercase; left:0; right:0; margin:0 auto; text-align: center;}
+.popups form label{ font-family:gotham_bookregular; font-size:12px; display:inline; text-transform:uppercase;}
+.popups form input[type="text"], .popups form input[type="password"], .formattedSelect{ height:13px; border:1px solid #97c4c6; box-shadow:inset 0px 0px 3px rgba(0,0,0,.28); background-color:#fff; font-family:'Constantia'; font-size:11pt;}
+.popups form .rooja_signup_text_create input[type="text"], .popups form input[type="password"]{ width:215px;}
+.popups form .form-list .field{ width:245px;}
+.popups .field:first-child{ margin-right:5px!important;}
+.popups form .rooja_signup_email_create input[type="text"]{ width:465px;}
+.formattedSelect{ height:24px; width:235px; margin-bottom:10px; background-color:#e9e9e9; box-shadow:none; padding:5px 0px; position:relative;}
+.formattedSelect select, .formattedSelect select:focus, .formattedSelect select:hover{ border:none; outline:none; background-color:transparent; width:237px; margin-left:-1px; padding:0 10px;}
+.formattedSelect .selectArrow{ position:absolute; top:0; right:0; pointer-events:none; height:34px; width:31px; background-position:-171px -68px; z-index:9999;}
+.popups form #rooja_signup_left_joinnow_create input[type="submit"]{ margin:14px 0 4px!important; cursor:pointer;}
+#rooja_signup_left_joinnow_create input[type="submit"]:hover{ background-color:#ad5600;}
