new landing page

--- a/app/design/frontend/default/rooja/template/page/landing_page.phtml
+++ b/app/design/frontend/default/rooja/template/page/landing_page.phtml
@@ -309,7 +309,12 @@ var request = new Ajax.Request("<?php echo Mage::getBaseUrl(); ?>" + "customer /
 	}
 	return false;
 	}
-jQuery('.bxslider').bxSlider();
+jQuery('.bxslider').bxSlider(
+	autoControls:true
+);
+jQuery('.testiSlider').bxSlider(
+	autoControls:true
+);
 		</script>
 		</body>
 </html>
