--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -877,62 +877,62 @@ line-height: 17px;
 */
 
 @font-face {
-	font-family: 'Quattrocento';
+	font-family: 'quattrocento';
     src: url('fonts/QuattrocentoSans-Regular.eot');
-    src: url('fonts/QuattrocentoSans-Regular.eot') format('embedded-opentype'),
+    src: url('fonts/QuattrocentoSans-Regular.eot?#iefix') format('embedded-opentype'),
          url('fonts/QuattrocentoSans-Regular.woff') format('woff'),
          url('fonts/QuattrocentoSans-Regular.ttf') format('truetype'),
-         url('fonts/QuattrocentoSans-Regular.svg') format('svg');
+         url('fonts/QuattrocentoSans-Regular.svg#quattrocento') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
-	font-family: 'Gotham Book';
+	font-family: 'gotham_book';
     src: url('fonts/Gotham-Book.eot');
-    src: url('fonts/Gotham-Book.eot') format('embedded-opentype'),
+    src: url('fonts/Gotham-Book.eot?#iefix') format('embedded-opentype'),
          url('fonts/Gotham-Book.woff') format('woff'),
          url('fonts/Gotham-Book.ttf') format('truetype'),
-         url('fonts/Gotham-Book.svg') format('svg');
+         url('fonts/Gotham-Book.svg#gotham_book') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
-	font-family: 'Gotham Light';
+	font-family: 'gotham_light';
     src: url('fonts/Gotham-Light.eot');
-    src: url('fonts/Gotham-Light.eot') format('embedded-opentype'),
+    src: url('fonts/Gotham-Light.eot?#iefix') format('embedded-opentype'),
          url('fonts/Gotham-Light.woff') format('woff'),
          url('fonts/Gotham-Light.ttf') format('truetype'),
-         url('fonts/Gotham-Light.svg') format('svg');
+         url('fonts/Gotham-Light.svg#gotham_light') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
-	font-family: 'Gotham Medium';
+	font-family: 'gotham_medium';
     src: url('fonts/Gotham-Medium.eot');
-    src: url('fonts/Gotham-Medium.eot') format('embedded-opentype'),
+    src: url('fonts/Gotham-Medium.eot?#iefix') format('embedded-opentype'),
          url('fonts/Gotham-Medium.woff') format('woff'),
          url('fonts/Gotham-Medium.ttf') format('truetype'),
-         url('fonts/Gotham-Medium.svg') format('svg');
+         url('fonts/Gotham-Medium.svg#gotham_medium') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
-	font-family: 'Gotham Extra Light';
+	font-family: 'gotham_extra_light';
     src: url('fonts/Gotham-XLight.eot');
-    src: url('fonts/Gotham-XLight.eot') format('embedded-opentype'),
+    src: url('fonts/Gotham-XLight.eot?#iefix') format('embedded-opentype'),
          url('fonts/Gotham-XLight.woff') format('woff'),
          url('fonts/Gotham-XLight.ttf') format('truetype'),
-         url('fonts/Gotham-XLight.svg') format('svg');
+         url('fonts/Gotham-XLight.svg#gotham_extra_light') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
 	font-family: 'segoeui';
     src: url('fonts/segoeui.eot');
-    src: url('fonts/segoeui.eot') format('embedded-opentype'),
+    src: url('fonts/segoeui.eot?#iefix') format('embedded-opentype'),
          url('fonts/segoeui.woff') format('woff'),
          url('fonts/segoeui.ttf') format('truetype'),
-         url('fonts/segoeui.svg') format('svg');
+         url('fonts/segoeui.svg#segoeui') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -1017,10 +1017,10 @@ input::-moz-focus-inner {
 .Landing button{ background-color:#eca70d; border-radius:0; display:block ; color:#fff; font-size:33.86px; font-family:segoeui, Arial; line-height:1;}
 .Landing button:hover{ box-shadow:none;  background-color:#cb900c;}
 .Landing .Call{ float:right; margin-top:30px; color:#4f3059; font-size:17px; text-align:right; white-space:nowrap;}
-.Call .nmbr{vertical-align:middle; font-family:Quattrocento; font-size:17px; line-height:1; white-space:nowrap;}
+.Call .nmbr{vertical-align:middle; font-family:quattrocento; font-size:17px; line-height:1; white-space:nowrap;}
 .Call .nmbr small{ font-size:12px;}
 .Landing .offers{ margin:35px auto;}
-.Landing .offers li{ margin-right:20px; text-transform:uppercase; font-size:11.71px; color:#4f3059; font-family:Gotham Medium, Arial; }
+.Landing .offers li{ margin-right:20px; text-transform:uppercase; font-size:11.71px; color:#4f3059; font-family:gotham_medium, Arial; }
 .Landing .offers li div{vertical-align:middle!important;}
 /*First-Screen*/
 .topCnt{ min-height:415px;}
@@ -1037,7 +1037,7 @@ a.lCommon:hover{ color:#000; text-decoration:none;}
 .blockTestimonial:before{ top:-17px; left:-12px;}
 .blockTestimonial:after{ bottom:-15px; right:-10px;}
 .blockTestimonial .writer{ font-family:Verdana, Geneva, sans-serif;}
-.featuredBrands h3{ line-height:22px; text-decoration:underline; margin-top:12px; margin-bottom:10px; font-size:14px; font-family:Gotham Medium, Arial; font-weight:bold; }
+.featuredBrands h3{ line-height:22px; text-decoration:underline; margin-top:12px; margin-bottom:10px; font-size:14px; font-family:gotham_medium, Arial; font-weight:bold; }
 .featuredBrands ul{ display:table; width:100%; *display:block; margin-bottom:15px;}
 .featuredBrands li{ vertical-align:middle; display:table-cell; *display:inline; *margin-right:14px;}
 /*LandingBanner*/
@@ -1046,7 +1046,7 @@ a.lCommon:hover{ color:#000; text-decoration:none;}
 .LandingBanner .BannerMatter{ width:485px; margin-left:53%; color:#22222; position:absolute; top:0; left:0; bottom:0; height:100%; z-index:2; text-align:left}
 .BannerMatter .promotionText{width:285px; position:absolute; bottom:36px; right:0;}
 .promotionText{ text-align:center; }
-.promotionText h3{font-size:14px; color:#4f3059; margin:15px 0; font-weight:bold; font-family:Gotham Light;}
+.promotionText h3{font-size:14px; color:#4f3059; margin:15px 0; font-weight:bold; font-family:gotham_light, segoeui;}
 .promotionText .content{ font-size:12px; font-style:italic!important; font-family:Constantia, Georgia;}
 /*TwitterFeed*/
 .TwitterFeed{ margin-top:15px;}
@@ -1064,14 +1064,14 @@ a.lCommon:hover{ color:#000; text-decoration:none;}
 .footerNw a:hover{color:#fbbd55; text-decoration:underline;}
 .footerNw .promotionText{ float:left; width:30%; margin:70px 1.5% 0;}
 .paymentMethd{ float:right; text-align:center; margin-bottom:4px;}
-.paymentMethd h4{ margin:57px 0 5px; font-family:Quattrocento; font-size:12.56px; padding:0;}
+.paymentMethd h4{ margin:57px 0 5px; font-family:quattrocento, segoeui; font-size:12.56px; padding:0;}
 button.joinRooja{ width:276px; height:86px; margin:103px auto 25px; font-size:12px; }
 .blockTime{ width:223px!important; margin:0 auto;}
-a.joinLink{ text-decoration:underline; font-family:Gotham Book;}
+a.joinLink{ text-decoration:underline; font-family:gotham_book, segoeui;}
 a.joinLink:hover{ text-decoration:none;}
 .footerNw .foot{ background-color:#000; height:38px; padding:4px 0;}
 .footerNw .social{ margin:7px 0; float:right; white-space:nowrap;}
-.footerNw .social a{ margin-right:25px; font-family:Quattrocento; font-size:12px;}
+.footerNw .social a{ margin-right:25px; font-family:quattrocento; font-size:12px;}
 /*Popup*/
 .bgDull{ position: fixed; top:0; left:0; width:100%; height:100%; background-color:#000; opacity:.4; filter:alpha(opacity=40); z-index: 9950; display:none;}
 .popups {
@@ -1091,21 +1091,21 @@ a.joinLink:hover{ text-decoration:none;}
 	margin-left:-247px;
 	margin-top:-275px;
 }
-.popups h2{ text-align: center; font-family:Gotham Extra Light;}
+.popups h2{ text-align: center; font-family:gotham_extra_light;}
 .popups .popClose{ cursor: pointer; background-color:#4f3059; background-position:-171px -48px; width:20px; height:20px; position: absolute; right:3px; top:3px; z-index:9999; text-indent:-1000px; overflow:hidden; }
 .popups .popClose:hover{background-position:-191px -48px;}
 .nw .rooja_signup_right_fb_create a{ background-position:0 -488px; width:265px; height:41px;}
 .nw .rooja_signup_right_fb_create a:hover{ background-position:0 -529px;}
 .bdrOption{ border-bottom:2px dotted #54365e; padding-bottom:26px; margin-bottom: 26px; position:relative;}
-.bdrOption .or{ font-family:arial; font-weight:bold; font-size:12px; position: absolute; bottom:-5px; background:#fff; width:33px; text-transform: uppercase; left:0; right:0; margin:0 auto; text-align: center;}
+.bdrOption .or{ font-family:arial; font-weight:bold; font-size:12px; position: absolute; bottom:-8px; background:#fff; width:33px; text-transform: uppercase; left:0; right:0; margin:0 auto; text-align: center; *margin-left:46%;}
 .popups form label{ font-family:gotham_bookregular; font-size:12px; display:inline; text-transform:uppercase;}
-.popups form input[type="text"], .popups form input[type="password"], .formattedSelect{ height:13px; border:1px solid #97c4c6; box-shadow:inset 0px 0px 3px rgba(0,0,0,.28); background-color:#fff; font-family:'Constantia'; font-size:11pt;}
+.popups form input[type="text"], .popups form input[type="password"], .formattedSelect{ height:20px; padding:6px 10px; border:1px solid #97c4c6; box-shadow:inset 0px 0px 3px rgba(0,0,0,.28); background-color:#fff; font-family:'Constantia'; font-size:11pt; font-style:italic; color:#a29f9f!important;}
 .popups form .rooja_signup_text_create input[type="text"], .popups form input[type="password"]{ width:215px;}
 .popups form .form-list .field{ width:245px;}
 .popups .field:first-child{ margin-right:5px!important;}
 .popups form .rooja_signup_email_create input[type="text"]{ width:465px;}
 .formattedSelect{ height:24px; width:235px; margin-bottom:10px; background-color:#e9e9e9; box-shadow:none; padding:5px 0px; position:relative;}
-.formattedSelect select, .formattedSelect select:focus, .formattedSelect select:hover{ border:none; outline:none; background-color:transparent; width:237px; margin-left:-1px; padding:0 10px;}
-.formattedSelect .selectArrow{ position:absolute; top:0; right:0; pointer-events:none; height:34px; width:31px; background-position:-171px -68px; z-index:9999;}
+.formattedSelect select, .formattedSelect select:focus, .formattedSelect select:hover{ border:none; outline:none; background-color:transparent; *border:1px solid #e9e9e9; width:237px; margin-left:-1px; *margin-left:1px; *width:235px; padding:0 10px;}
+.formattedSelect .selectArrow{ position:absolute; top:0; right:0; *right:-1px; *border-right:1px solid #97C4C6; pointer-events:none; height:34px; width:31px; background-position:-171px -68px; z-index:9999;}
 .popups form #rooja_signup_left_joinnow_create input[type="submit"]{ margin:14px 0 4px!important; cursor:pointer;}
 #rooja_signup_left_joinnow_create input[type="submit"]:hover{ background-color:#ad5600;}
