--- a/app/design/frontend/default/rooja/template/page/landing_page.phtml
+++ b/app/design/frontend/default/rooja/template/page/landing_page.phtml
@@ -134,7 +134,8 @@
 				<div class="sprite popClose"></div>
 				<h2>become a member</h2>
 				<div class="rooja_signup_right_fb_create">
-					<a href="http://rooja.com/login/facebook/index/" class="sprite"></a>
+					<a class="sprite" href="#" rel="facebook-connect"></a>
+					
 				</div>
 				<div class="bdrOption">
 					<div class="or">
