new landing page

--- a/app/design/frontend/default/rooja/template/page/landing_page.phtml
+++ b/app/design/frontend/default/rooja/template/page/landing_page.phtml
@@ -134,8 +134,7 @@
 				<div class="sprite popClose"></div>
 				<h2>become a member</h2>
 				<div class="rooja_signup_right_fb_create">
-					<a class="sprite" href="#" rel="facebook-connect"></a>
-					
+					<a href="#" rel="facebook-connect" class="sprite"></a>
 				</div>
 				<div class="bdrOption">
 					<div class="or">
